--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@ body{
   z-index:1000;
 }
 
+/* ===== PRINT + PDF BUTTON ===== */
+#printBtn, #pdfBtn{
+  position:absolute;
+  top:10px;
+  padding:6px 12px;
+  background:#22c55e;
+  border:none;
+  border-radius:6px;
+  color:white;
+  cursor:pointer;
+  font-size:13px;
+}
+
+#printBtn{ right:110px; }
+#pdfBtn{ right:20px; background:#3b82f6; }
+
 /* ===== FIXED COMMAND BAR ===== */
 #topBar{
   position:fixed;
@@ -117,6 +133,8 @@ body{
 <!-- ===== TITLE ===== -->
 <div id="titleBar">
   📊 All Stenter Report
+  <button id="printBtn" onclick="printChat()">🖨 Print</button>
+  <button id="pdfBtn" onclick="downloadPDF()">📄 PDF</button>
 </div>
 
 <!-- ===== COMMANDS ===== -->
@@ -151,6 +169,8 @@ const chat = document.getElementById("chat");
 const text = document.getElementById("text");
 const send = document.getElementById("send");
 
+let lastUserQuery = "";
+
 function addMessage(content, type){
   const div = document.createElement("div");
   div.className = "message " + type;
@@ -167,6 +187,8 @@ function quick(cmd){
 async function sendMessage(){
   const question = text.value.trim();
   if(!question) return;
+
+  lastUserQuery = question;
 
   addMessage(question, "user");
   text.value="";
@@ -185,7 +207,6 @@ async function sendMessage(){
 
     const data = await res.json();
     loadingDiv.remove();
-
     addMessage(data.reply.replace(/\n/g,"<br>"), "bot");
 
   }catch(err){
@@ -201,6 +222,52 @@ text.addEventListener("keypress", function(e){
     sendMessage();
   }
 });
+
+/* ===== PROFESSIONAL PRINT FUNCTION ===== */
+function printChat(){
+
+  const botMessages = document.querySelectorAll(".bot");
+  let reportContent = "";
+
+  botMessages.forEach(msg=>{
+    reportContent += `<div style="margin-bottom:10px;">${msg.innerHTML}</div>`;
+  });
+
+  const today = new Date();
+  const dateTime = today.toLocaleString();
+
+  const newWindow = window.open("", "", "width=900,height=700");
+
+  newWindow.document.write(`
+    <html>
+    <head>
+      <title>Stenter Report</title>
+      <style>
+        body{ font-family:Arial; padding:30px; }
+        h1{ text-align:center; margin-bottom:5px; }
+        h3{ text-align:center; margin-top:0; }
+        hr{ margin:20px 0; }
+      </style>
+    </head>
+    <body>
+      <h1>Sukhy Dyeing & Finishing Mills LTD.</h1>
+      <h3>All Stenter Report</h3>
+      <p><b>Query:</b> ${lastUserQuery}</p>
+      <p><b>Date:</b> ${dateTime}</p>
+      <hr>
+      ${reportContent}
+    </body>
+    </html>
+  `);
+
+  newWindow.document.close();
+  newWindow.print();
+}
+
+/* ===== DIRECT PDF DOWNLOAD ===== */
+function downloadPDF(){
+  printChat();
+}
 </script>
 
 </body>
